src/main/java/com/example/SpringTestJava/error/ErrorMessage.java
package com.example.SpringTestJava.error;

import org.springframework.http.HttpStatus;

public class ErrorMessage {

    private int customerNumber;
    private int transactionStatusCode;
    private String transactionStatusDescription;

    public ErrorMessage() {
    }

    public ErrorMessage(int customerNumber, int transactionStatusCode, String transactionStatusDescription) {
        this.customerNumber = customerNumber;
        this.transactionStatusCode = transactionStatusCode;
        this.transactionStatusDescription = transactionStatusDescription;
    }

    public ErrorMessage(HttpStatus httpStatus, String message) {
    }

    public int getCustomerNumber() {
        return customerNumber;
    }

    public void setCustomerNumber(int customerNumber) {
        this.customerNumber = customerNumber;
    }

    public int getTransactionStatusCode() {
        return transactionStatusCode;
    }

    public void setTransactionStatusCode(int transactionStatusCode) {
        this.transactionStatusCode = transactionStatusCode;
    }

    public String getTransactionStatusDescription() {
        return transactionStatusDescription;
    }

    public void setTransactionStatusDescription(String transactionStatusDescription) {
        this.transactionStatusDescription = transactionStatusDescription;
    }
}
